More improvements on workout dtos
