# src/routes/api/html/openapi.yml
@@ -2167,65 +2167,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                start:
-                  type: string
-                  format: date-time
-                end:
-                  type:
-                    - string
-                    - "null"
-                  format: date-time
-                calories:
-                  type: number
-                exercises:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      id:
-                        type: number
-                      exerciseId:
-                        type: number
-                      sets:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            id:
-                              type: number
-                            end:
-                              type:
-                                - string
-                                - "null"
-                              format: date-time
-                            weight:
-                              type:
-                                - number
-                                - "null"
-                            reps:
-                              type:
-                                - number
-                                - "null"
-                            start:
-                              type:
-                                - string
-                                - "null"
-                              format: date-time
-                          required:
-                            - end
-                            - weight
-                            - reps
-                            - start
-                    required:
-                      - exerciseId
-                      - sets
-              required:
-                - start
-                - end
-                - calories
-                - exercises
+              $ref: "#/components/schemas/WorkoutUpdateDTO"
       responses:
         "200":
           description: Good Response
@@ -3808,7 +3750,9 @@ components:
           type: string
           format: date-time
         end:
-          type: string
+          type:
+            - string
+            - "null"
           format: date-time
         createdAt:
           type: string
@@ -3943,3 +3887,87 @@ components:
         - reps
         - createdAt
         - updatedAt
+    WorkoutUpdateDTO:
+      type: object
+      properties:
+        externalId:
+          type:
+            - string
+            - "null"
+        typeId:
+          type:
+            - integer
+            - "null"
+          minimum: -2147483648
+          maximum: 2147483647
+        calories:
+          type: number
+          minimum: -8388608
+          maximum: 8388607
+        start:
+          type: string
+          format: date-time
+        end:
+          type:
+            - string
+            - "null"
+          format: date-time
+        exercises:
+          type: array
+          items:
+            $ref: "#/components/schemas/WorkoutExerciseUpdateDto"
+      required:
+        - externalId
+        - typeId
+        - calories
+        - start
+        - end
+        - exercises
+    WorkoutExerciseUpdateDto:
+      type: object
+      properties:
+        id:
+          type: number
+        exerciseId:
+          type: integer
+          minimum: -2147483648
+          maximum: 2147483647
+        sets:
+          type: array
+          items:
+            $ref: "#/components/schemas/WorkoutExerciseSetUpdateDto"
+      required:
+        - exerciseId
+        - sets
+    WorkoutExerciseSetUpdateDto:
+      type: object
+      properties:
+        id:
+          type: number
+        start:
+          type:
+            - string
+            - "null"
+          format: date-time
+        end:
+          type:
+            - string
+            - "null"
+          format: date-time
+        weight:
+          type:
+            - number
+            - "null"
+          minimum: -8388608
+          maximum: 8388607
+        reps:
+          type:
+            - integer
+            - "null"
+          minimum: -2147483648
+          maximum: 2147483647
+      required:
+        - start
+        - end
+        - weight
+        - reps
